# A2A-Server-Management

./: README.md
src/: __main__.py  config.py  main.py  pyproject.toml
src/a2a/: a2a_server.py  agent_task_manager.py  task_manager.py  utils.py
src/agents/autogen/: agent_1.py
src/routers/: __init__.py  agent.py  root.py
src/routers/payload_examples/: agent.py
src/static/: index.html
