[project]
name = "a2a-server-management"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "autogen-agentchat>=0.5.3",
    "autogen-core>=0.5.3",
    "autogen-ext>=0.5.3",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "jwcrypto>=1.5.6",
    "jwt>=1.3.1",
    "langchain-core>=0.3.54",
    "langchain-google-genai>=2.1.3",
    "langgraph>=0.3.31",
    "openai>=1.75.0",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.9.1",
    "pyjwt>=2.10.1",
    "ruff>=0.11.6",
    "sse-starlette>=2.2.1",
    "tiktoken>=0.9.0",
    "uvicorn>=0.34.2",
]
